[metadata]
name = bell
version = 0.1.0
author = Nick Sorros
author_email = nick@mantisnlp.com
description = A tool to alert us about AWS instances
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MantisAI/bell
project_urls =
    Bug Tracker = https://github.com/MantisAI/bell/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    boto3
    loguru
python_requires = >=3.6

[options.entry_points]
console_scripts =
    bell = bell:cli

[options.extras_require]
test =
    pytest
